--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <main class="main-container">
         <article class="card">
             <div class="card-box-image">
-                <img class="card-box-image-img" src="/images/image-equilibrium.jpg" alt="product">
+                <img class="card-box-image-img" src="images/image-equilibrium.jpg" alt="product">
                 <div class="card-box-image-overlay">
-                    <img src="/images/icon-view.svg" alt="eye icon">
+                    <img src="images/icon-view.svg" alt="eye icon">
                 </div>
             </div>
             <div class="card-box-text">
